# mysqlftppc-snowball

./: INSTALL  Makefile.am  configure.in  ftnorm.c  ftnorm.h  mysql-5.1.28-30.patch  plugin_snowball.c  plugin_snowball.cpp  plugin_snowball.h  reader_snowball.cpp  reader_snowball.h
libstemmer_c/: Makefile  Makefile.am
test/: test.sh  test.sql
